src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>BGTest__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_390,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_390)+4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BG Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_Details__c</fullName>
        <label>Benefits Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drafting_Service_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Cabinet Office does not endorse the use of fee-charging drafting services when completing this form. Please tell us if you have made use of such a service by ticking here.</description>
        <label>Drafting Service Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evidence_Option__c</fullName>
        <description>Will evidence be attached to this submission.</description>
        <label>Evidence Option</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, I am ready to attach them</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I will send them later</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letters_Of_Support_Received_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if all of the letters of support have been received via email or post. This will update the status of the nomination on the account profile page.</description>
        <label>Letters of Support Received Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letters_of_Support_Option__c</fullName>
        <description>Nominee&apos;s preference for how letters of support will be provided.</description>
        <label>Letters of Support Option</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, I am ready to attach them</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I will send them later</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letters_of_Support_Outstanding__c</fullName>
        <description>The number of letters that will need to be uploaded to meet the minimum requirement for submission.</description>
        <formula>IF(OR(VALUE($Label.HAS_Minimum_Required_Letters_Value) &lt;= Letters_of_Support_Uploaded__c, Letters_Of_Support_Received_Offline__c = true), 0, VALUE($Label.HAS_Minimum_Required_Letters_Value) - Letters_of_Support_Uploaded__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letters of Support Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letters_of_Support_Required__c</fullName>
        <description>This is a new field created as part of the HAS Form Implementation. It is being used to count how many child support records have the check box &apos;letters to follow&apos; set to true</description>
        <inlineHelpText>Count of Supporters who still need to provide a Letter of Support</inlineHelpText>
        <label>Letters of Support Required</label>
        <summaryFilterItems>
            <field>Supporter__c.Letter_Submitted__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Supporter__c.Nomination_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Letters_of_Support_Uploaded__c</fullName>
        <description>A total of letters uploaded via the nomination form.</description>
        <label>Letters of Support Uploaded</label>
        <summaryFilterItems>
            <field>Nomination_Attachment__c.Attachment_Type__c</field>
            <operation>equals</operation>
            <value>Supporting letter</value>
        </summaryFilterItems>
        <summaryForeignKey>Nomination_Attachment__c.Nomination__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nominator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Contact Object. It represents a Nominator for a HAS Form Submission</description>
        <label>Nominator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Nominator Id</relationshipLabel>
        <relationshipName>NominatorID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nominee_Name__c</fullName>
        <description>This is a new field as part of the HAS Implementation. This outputs the associated Nominee contact&apos;s First name and Last name</description>
        <formula>Nominee__r.FirstName+&apos; &apos;+Nominee__r.LastName</formula>
        <label>Nominee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Contact object. It represents a Nominee on a HAS form Submission</description>
        <label>Nominee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Nominee Id</relationshipLabel>
        <relationshipName>NomineeId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_Posts_Added__c</fullName>
        <description>A total of the number of posts the nominee has held.</description>
        <label>Number of Posts Added</label>
        <summaryForeignKey>Post__c.Nomination_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Supports_Added__c</fullName>
        <description>This is a new field added as part of the HAS Implementation. This counts up how many support records have been associated with the case record. It will be used in a Validation rule to ensure that at least 2 supporters are added</description>
        <label>Number of Supporters Added</label>
        <summaryForeignKey>Supporter__c.Nomination_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>This is part of the HAS Implementation. This is being used to hold the Nominee&apos;s Country of Origin</description>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Recognition__c</fullName>
        <description>This is part of the HAS Form Implementation. The field is used to hold information relating to any other recognitions the Nominee might have.</description>
        <label>Other Recognition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Others_In_Post__c</fullName>
        <description>This is used as part of the HAS Form Implementation. It is used for the Nominator to state whether there are any other people in the same post as the nominator. If the answer is yes and the Standout details field is empty, then a validation rule should be triggered.</description>
        <label>Others In Post</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Details__c</fullName>
        <description>This is a field to be used as Part of the HAS Form Implementation. It is being used to store the details of the posts the Nominee has held</description>
        <label>Post Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress_Status__c</fullName>
        <description>Used in the Account VF page to show the status of a nomination</description>
        <formula>IF(
NOT(ISPICKVAL(Progress__c,&quot;Submitted&quot;)),$Label.HAS_Nomination_Table_Status_In_Progress,
IF(
OR(Letters_Of_Support_Received_Offline__c = True, Letters_of_Support_Uploaded__c &gt;= 2),
$Label.HAS_Nomination_Table_Status_Complete,$Label.HAS_Nomination_Table_Status_Letters
)
)</formula>
        <label>Progress Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>This is used as part of the HAS Form Implementation. It is used to indicate a Nominator&apos;s progress through their submission. The value chosen from this list, drives where the user will pick back up if they log in to continue their form submission</description>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominator Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominator Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominator Contact Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Contact Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee DoB or Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Nationality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship to Nominee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Posts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Impact Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Similar Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Other Awards/Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Evidence Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominee Supporters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominator Supporter Letters Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equality Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewing Nomination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_summary__c</fullName>
        <inlineHelpText>For example services to disabled people in Rochdale or services to the community in Aberporth.</inlineHelpText>
        <label>Recommendation summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Nominator_to_Nominee__c</fullName>
        <description>How does the nominator know the nominee?</description>
        <inlineHelpText>For example: son, friend, colleague</inlineHelpText>
        <label>Relationship of nominator to nominee</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standout_Details__c</fullName>
        <description>This is a field which will be used with the HAS Form Implementation. It is being used to store information about the Nominee and their actions which make the Nominee Stand out from other persons in their position - if applicable. There will be a validation rule that should fire if this field is empty and the Others In Post Picklist is set to Yes</description>
        <label>Standout Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenNominations</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Nominee_Name__c</columns>
        <columns>Letters_of_Support_Required__c</columns>
        <columns>Progress__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Nominations</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Sample_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Sample Cases</value>
        </filters>
        <label>Sample Cases</label>
    </listViews>
    <listViews>
        <fullName>Trial_Activities</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Trial</value>
        </filters>
        <label>Trial Activities</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>HAS_Form_Enforce_number_of_supporters</fullName>
        <active>false</active>
        <description>This is a validation rule to be used with the HAS Form Implementation. It will validate that the roll up summary, counting how many supporter child records the case has which have the &apos;letter of support provided&apos; checkbox set to false, is not equal to 1.</description>
        <errorConditionFormula>Number_of_Supports_Added__c = 1</errorConditionFormula>
        <errorMessage>You must provide details for at least 2 supporters</errorMessage>
    </validationRules>
</CustomObject>